<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="com.example.android.businesscardapp.MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:contentDescription="@string/description"
        android:src="@drawable/kennyslogo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/name_margin_top"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_2"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/address"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/description"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/address_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/hours"
        android:layout_alignLeft="@id/hours"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:contentDescription="@string/address"
        android:padding="@dimen/padding"
        android:src="@drawable/ic_location_on_black_24dp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginLeft="@dimen/margin_2"
        android:gravity="center"
        android:autoLink="map"
        android:padding="@dimen/padding"
        android:text="@string/address"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/phone"
        android:layout_toEndOf="@+id/address_icon"
        android:layout_toRightOf="@id/address_icon"
        android:gravity="center"
        android:contentDescription="@string/phone"
        android:padding="@dimen/padding_2"
        android:src="@drawable/ic_local_phone_black_24dp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/phone_layout_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/hours"
        android:layout_marginEnd="@dimen/phone_margin"
        android:layout_marginRight="@dimen/phone_margin"
        android:autoLink="phone"
        android:gravity="center"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/hours_margin_top"
        android:gravity="center"
        android:text="@string/hours"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textStyle="bold" />
</RelativeLayout>